--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       }
 
       .logo {
-        width: min(90%, 400px);
-        margin-bottom: 1rem;
+        width: min(50%, 300px);
+        margin-bottom: 0.5rem;
       }
 
       .gta-logo {
@@ -310,7 +310,7 @@
     <div id="app">
       <div class="hero">
         <div class="logo">
-          <!-- <img src="" alt="GTA V Logo" class="gta-logo"> -->
+          <img src="image.png" alt="GTA V Logo" class="gta-logo">
         </div>
         <h1>GTA V Premium Edition</h1>
         <div class="price-tag">₹300 Only</div>
