--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div id="app">
       <div class="hero">
         <div class="logo">
-          <img src="image.png" alt="GTA V Logo" class="gta-logo">
+          <img src="3378bfd4-dd8b-4f5d-ac25-ee5ecb09c7c9.webp" alt="GTA V Logo" class="gta-logo">
         </div>
         <h1>GTA V Premium Edition</h1>
         <div class="price-tag">₹300 Only</div>
